--- a/Index.html
+++ b/Index.html
@@ -30,7 +30,7 @@
 </div>
 
 <div class="col-sm-6 col-xs-12 main_div">
-  <label>Looking Good</label>
+  <label>Lets See </label>
   <div id="result">
   </div>
   <button onclick="check();" class="btn btn-info">Whats this?</button>
@@ -40,13 +40,17 @@
 <div class="col-sm-6 col-xs-12 footer_div">
 <h4 class="col-sm-6 col-xs-12">
 See which won is better:
-<span id="object_name"></span>
+<span id="Mobile_net"></span>
+<label>output on mobile.Net</label>
+<label></label>
+<br><br>
+<span id="Azure"></span>
+<label>output on Azure</label>
+<label></label>
 </h4>
-</div>
 
-<div class="col-sm-6 col-xs-12  copy-right_footer">
-Developed By-Krishna Singla
 </div>
-<script src="main.js"></script>
+<span></span>
+<span></span>
   </body>
 </html>
