--- a/Index.html
+++ b/Index.html
@@ -21,33 +21,36 @@
 <img src="logo.gif">
 </h2>
 </div>
-
-<div class="col-sm-6 col-xs-12 main_div">
-<label>Webcam-view</label>
-<div id="camera">
+<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 results" >
+  <h3>Test-Image 1</h3>
+  <label class="object_name">Head phones</label>
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRzKPvifkPqdONmA_s1HVNcMwVv32_R6c2qsQ&usqp=CAU">
+<div class="result_para_tag">
+<h3>Results from Google-lens</h3>
+<label id="result_google_lens"></label>
 </div>
-<button onclick="take_snapshot();" class="btn btn-info">Capture Image</button>
-</div>
+<div class="result_para_tag">
+  <h3>Results from Mobile-net</h3>
+  <label id="result_google_lens"></label>
+   </div>
+<label<span id="result_final"></span>></label>
+ </div>
 
-<div class="col-sm-6 col-xs-12 main_div">
-  <label>Lets See </label>
-  <div id="result">
-  </div>
-  <button onclick="check();" class="btn btn-info">Whats this?</button>
-  </div>
+ <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 results" >
+  <h3>Test-Image 2</h3>
+  <label class="object_name">Water bottle</label>
+<img src="https://p.kindpng.com/picc/s/676-6761546_adidas-squeeze-water-bottle-hd-png-download.png">
+<div class="result_para_tag">
+<h3>Results from Google-lens</h3>
+<label id="result_google_lens"></label>
+</div>
+<div class="result_para_tag">
+  <h3>Results from Mobile-net</h3>
+  <label id="result_google_lens"></label>
+   </div>
+<label<span id="result_final"></span>></label>
+ </div>  
     </center>
-
-<div class="col-sm-6 col-xs-12 footer_div">
-<h4 class="col-sm-6 col-xs-12">
-See which won is better:
-<span id="Mobile_net"></span>
-<label>output on mobile.Net</label>
-<label></label>
-<br><br>
-<span id="Azure"></span>
-<label>output on Azure</label>
-<label></label>
-</h4>
 
 </div>
 <span></span>
